--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-
+    <link rel="stylesheet" href="style.css" />
     <title>Availability</title>
   </head>
   <body>
@@ -140,12 +140,12 @@
     <main>
       <form>
         <h2>Choose Destination</h2>
-        <select id="destination">
+        <select class="col-sm form-control mr-sm-2" id="destination">
           <option value="tahiti">Tahiti</option>
           <option value="seychelles">Seychelles</option>
         </select>
         <h2>Choose cabin category</h2>
-        <select id="category">
+        <select class="col-sm form-control mr-sm-2" id="category">
           <option value="A">A</option>
           <option value="B">B</option>
           <option value="C">C</option>
@@ -160,7 +160,13 @@
           </p>
         </div>
 
-        <button type="button" onclick="myFunction()">Check</button>
+        <button
+          class="btn btn-primary btn-lg btn-block"
+          type="button"
+          onclick="myFunction()"
+        >
+          Check
+        </button>
       </form>
     </main>
     <script src="app.js"></script>
