--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </div>
     </nav>
     <main>
-      <form>
+      <form class="bg-light">
         <h2>Choose Destination</h2>
         <select class="col-sm form-control mr-sm-2" id="destination">
           <option value="tahiti">Tahiti</option>
@@ -153,10 +153,10 @@
 
         <div id="output">
           <p id="output-cabins">
-            Number of Cabins Available: <span id="output-cabin-num"></span>
+            <h5>Number of Cabins Available: <span id="output-cabin-num"></span></h5>
           </p>
           <p id="output-price">
-            Price per person: <span id="output-cabin-price"></span> $
+            <h5>Price per person: <span id="output-cabin-price"></span> $</h5>
           </p>
         </div>
 
