--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         </button>
       </form>
     </main>
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+    <script src="main.js"></script>
   </body>
 </html>
