--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
       <form class="bg-light">
         <h2>Choose Destination</h2>
         <select class="col-sm form-control mr-sm-2" id="destination">
-          <option value="tahiti">Tahiti</option>
-          <option value="seychelles">Seychelles</option>
+          <!-- <option value="tahiti">Tahiti</option>
+          <option value="seychelles">Seychelles</option> -->
         </select>
         <h2>Choose cabin category</h2>
         <select class="col-sm form-control mr-sm-2" id="category">
-          <option value="A">A</option>
+          <!-- <option value="A">A</option>
           <option value="B">B</option>
-          <option value="C">C</option>
+          <option value="C">C</option> -->
         </select>
 
         <div id="output">
