--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </div>
     </nav>
     <main>
-      <form class="bg-light">
+      <form class="bg-light" id="form">
         <h2>Choose Destination</h2>
         <select class="col-sm form-control mr-sm-2" id="destination">
           <!-- <option value="tahiti">Tahiti</option>
@@ -166,6 +166,13 @@
           onclick="myFunction()"
         >
           Check
+        </button>
+        <button
+          class="btn btn-success btn-lg btn-block"
+          type="button"
+          id="booking-btn"          
+        >
+          Book Now
         </button>
       </form>
     </main>
