--- a/index.html
+++ b/index.html
@@ -170,10 +170,31 @@
         <button
           class="btn btn-success btn-lg btn-block"
           type="button"
-          id="booking-btn"          
+          id="booking-btn"   
+          onclick="bookingForm()"       
         >
           Book Now
         </button>
+      </form>
+      <form class="bg-light" id="booking-form">
+        <h3>Destination: <span id="booking-destination">Tahiti</span></h3>
+        <h3>Category: <span id="booking-category">A</span></h3>
+        <h3>Price: <span id="booking-price">1000</span></h3>
+        <h6>Primary Traveler</h6>
+        <p>First Name</p>
+        <input placeholder="Enter First Name">
+        <p>Last Name</p>
+        <input placeholder="Enter First Name">
+        <p>Phone</p>
+        <input placeholder="Enter First Name">
+        <h6>Secondary Traveler</h6>
+        <p>First Name</p>
+        <input placeholder="Enter First Name">
+        <p>Last Name</p>
+        <input placeholder="Enter First Name">
+        <p>Phone</p>
+        <input placeholder="Enter First Name">
+        
       </form>
     </main>
     <!-- <script src="app.js"></script> -->
