--- a/payment.html
+++ b/payment.html
@@ -124,18 +124,34 @@
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>
         </ul>
-        <!-- <form class="form-inline my-2 my-lg-0">
-            <input
-              class="form-control mr-sm-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-              Search
-            </button>
-          </form> -->
       </div>
     </nav>
+    <section>
+      <div class="container">
+        <form class="" action="" method="post">
+          <fieldset>
+            <legend>Payment</legend>
+            <div class="beautiful-field field-group credit-cart">
+              <label class="label" for="credit-card">Credit card</label>
+              <input
+                class="field"
+                id="credit-card"
+                value=""
+                autocomplete="off"
+                type="text"
+              />
+            </div>
+          </fieldset>
+        </form>
+      </div>
+    </section>
+    <script src="payment.html"></script>
+    <script>
+      $("#credit-card").on("keypress change", function () {
+        $(this).val(function (index, value) {
+          return value.replace(/\W/gi, "").replace(/(.{4})/g, "$1 ");
+        });
+      });
+    </script>
   </body>
 </html>
