--- a/index.html
+++ b/index.html
@@ -182,18 +182,18 @@
         <h3>Price: <span id="booking-price">1000</span></h3>
         <h6>Primary Traveler</h6>
         <p>First Name</p>
-        <input placeholder="Enter First Name">
+        <input class="form-control" placeholder="Enter First Name">
         <p>Last Name</p>
-        <input placeholder="Enter First Name">
+        <input class="form-control" placeholder="Enter First Name">
         <p>Phone</p>
-        <input placeholder="Enter First Name">
+        <input class="form-control" placeholder="Enter First Name">
         <h6>Secondary Traveler</h6>
         <p>First Name</p>
-        <input placeholder="Enter First Name">
+        <input class="form-control" placeholder="Enter First Name">
         <p>Last Name</p>
-        <input placeholder="Enter First Name">
+        <input class="form-control" placeholder="Enter First Name">
         <p>Phone</p>
-        <input placeholder="Enter First Name">
+        <input class="form-control" placeholder="Enter First Name">
         
       </form>
     </main>
