--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand ml-3" href="#">
         <svg
           width="138"
           height="32"
@@ -93,7 +93,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse ml-3" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#"
@@ -140,7 +140,7 @@
       </div>
     </nav>
     <main>
-      <form class="bg-light" id="form">
+      <form class="bg-light ml-3" id="form">
         <h2>Choose Destination</h2>
         <select class="col-sm form-control mr-sm-2" id="destination">
           <!-- <option value="tahiti">Tahiti</option>
@@ -178,7 +178,7 @@
           Book Now
         </button>
       </form>
-      <form class="bg-light" id="booking-form">
+      <form class="bg-light ml-3" id="booking-form">
         <h3>Destination: <span id="booking-destination">Tahiti</span></h3>
         <h3>Category: <span id="booking-category">A</span></h3>
         <h3>Price: <span id="booking-price">1000</span></h3>
