--- a/pdf.html
+++ b/pdf.html
@@ -9,7 +9,7 @@
   <body>
     <form>
       <h2>Tutorials point Contact Form</h2>
-      <label for="name">Enter your Name:</label>
+      <label id="labelName" for="name">Enter your Name:</label>
       <input type="text" id="name" name="name" /><br /><br />
       <label for="email">Enter your Email:</label>
       <input type="email" id="email" name="email" /><br /><br />
@@ -19,8 +19,8 @@
       <input type="text" id="city" name="city" /><br /><br />
       <label for="state">Enter your current State:</label>
       <input type="text" id="state" name="state" /><br /><br />
-      <img id="logo"><svg
-      
+      <img ><svg
+      id="logo"
       width="138"
       height="32"
       viewBox="0 0 138 32"
