--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
         </button>
       </form>
       <form class="bg-light ml-3" id="booking-form">
-        <h3>Destination: <span id="booking-destination">Tahiti</span></h3>
-        <h3>Category: <span id="booking-category">A</span></h3>
-        <h3>Price: <span id="booking-price">1000</span></h3>
+        <h3>Destination: <span id="booking-destination"></span></h3>
+        <h3>Category: <span id="booking-category"></span></h3>
+        <h3>Price: <span id="booking-price"></span></h3>
         <h6>Primary Traveler</h6>
         <div class="form-floating mb-3">
           <input type="text" class="form-control" id="floatingInput" placeholder="First Name">
