--- a/index.html
+++ b/index.html
@@ -182,7 +182,9 @@
       <form class="bg-light ml-3" id="booking-form">
         <h3>Destination: <span id="booking-destination"></span></h3>
         <h3>Category: <span id="booking-category"></span></h3>
-        <h3>Price: <span id="booking-price"></span></h3>
+        <h3>Price per person: <span id="booking-price"></span></h3>
+        <button type="button" class="btn btn-primary btn-sm mb-3">Single Traveler</button>
+        <button type="button" class="btn btn-secondary btn-sm mb-3">Two Travelers</button>
         <h6>Primary Traveler</h6>
         <div class="form-floating mb-3">
           <input type="text" class="form-control" id="floatingInput" placeholder="First Name">
