--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
         <h3>Destination: <span id="booking-destination"></span></h3>
         <h3>Category: <span id="booking-category"></span></h3>
         <h3>Price per person: <span id="booking-price"></span></h3>
-        <button type="button" class="btn btn-primary btn-sm mb-3" id="sglTraveler" onclick="sglTraveler()">Single Traveler</button>
-        <button type="button" class="btn btn-secondary btn-sm mb-3"id="dblTraveler" onclick="dblTraveler()">Two Travelers</button>
-        <div class="inputs mb-3">
+        <button type="button" class="btn btn-primary btn-sm mb-3" id="sglTraveler" onclick="sgl()">Single Traveler</button>
+        <button type="button" class="btn btn-secondary btn-sm mb-3" id="dblTraveler" onclick="dbl()">Two Travelers</button>
+        <div class="inputs-sgl mb-3">
           <h6>Primary Traveler</h6>
         <div class="form-floating mb-3">
           <input type="text" class="form-control" id="floatingInput" placeholder="First Name">
@@ -200,7 +200,7 @@
           <label for="floatingPassword">Phone Number</label>
         </div>
         </div>
-        <div class="inputs mb-3">
+        <div class="inputs-dbl mb-3">
           <h6>Secondary Traveler</h6>
         <div class="form-floating mb-3">
           <input type="text" class="form-control" id="floatingInput" placeholder="First Name">
