--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@
           Payment
         </button>
       </form>
+      <form class="bg-light ml-3" id="payment-form">
+        <h3 id="final-price"></h3>
+      </form>
     </main>
     <!-- <script src="app.js"></script> -->
     <script src="main.js"></script>
