--- a/index.html
+++ b/index.html
@@ -227,7 +227,41 @@
         </button>
       </form>
       <form class="bg-light ml-3" id="payment-form">
-        <h3 id="final-price"></h3>
+        <div class="row mb-4">
+          <div class="col">
+            <div class="form-outline">
+              <input type="text" id="formNameOnCard" class="form-control" />
+              <label class="form-label" for="formNameOnCard">Name on card</label>
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-outline">
+              <input type="text" id="formCardNumber" class="form-control" />
+              <label class="form-label" for="formCardNumber">Credit card number</label>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-8 mb-4">
+            <div class="row mb-4">
+              <div class="col-3">
+                <div class="form-outline">
+                  <input type="text" id="formExpiration" class="form-control" />
+                  <label class="form-label" for="formExpiration">Expiration</label>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="form-outline">
+                  <input type="text" id="formCVV" class="form-control" />
+                  <label class="form-label" for="formCVV">CVV</label>
+                </div>
+              </div>
+            </div>
+         </div>
+        </div>   
+        <button class="btn btn-primary btn-lg btn-block" type="submit">
+          Continue to checkout
+        </button>
       </form>
     </main>
     <!-- <script src="app.js"></script> -->
