--- a/index.html
+++ b/index.html
@@ -258,7 +258,8 @@
               </div>
             </div>
          </div>
-        </div>   
+        </div>  
+        <h5 class="col" id="pay-price"></h5>
         <button class="btn btn-primary btn-lg btn-block" type="button">
           Confirm
         </button>
