--- a/payment.html
+++ b/payment.html
@@ -127,23 +127,10 @@
       </div>
     </nav>
     <section>
-      <div class="container">
-        <form class="" action="" method="post">
-          <fieldset>
-            <legend>Payment</legend>
-            <div class="beautiful-field field-group credit-cart">
-              <label class="label" for="credit-card">Credit card</label>
-              <input
-                class="field"
-                id="credit-card"
-                value=""
-                autocomplete="off"
-                type="number"
-              />
-            </div>
-          </fieldset>
-        </form>
+      <div class="container-fluid p-0 mb-0">
+        <img class="img-fluid p-0 mb-0" src="./7852702_1932.jpg" />
       </div>
+      <h1 class="position-relative top-50 start-50">Book your Cruise</h1>
     </section>
     <script src="payment.js"></script>
     <!-- <script>
