--- a/payment.html
+++ b/payment.html
@@ -129,8 +129,10 @@
     <section>
       <div class="container-fluid p-0 mb-0">
         <img class="img-fluid p-0 mb-0" src="./7852702_1932.jpg" />
+        <h1 class="d-flex justify-content-center" id="titleLanding">
+          Book your Cruise
+        </h1>
       </div>
-      <h1 class="position-relative top-50 start-50">Book your Cruise</h1>
     </section>
     <script src="payment.js"></script>
     <!-- <script>
