--- a/index.html
+++ b/index.html
@@ -195,15 +195,15 @@
         <div class="inputs-dbl mb-3" id="inputs-dbl">
           <h6>Secondary Traveler</h6>
         <div class="form-floating mb-3">
-          <input type="text" class="form-control" id="floatingInput" placeholder="First Name">
+          <input type="text" class="form-control" id="floatingFirstNameDbl" placeholder="First Name">
           <label for="floatingInput">First Name</label>
         </div>
         <div class="form-floating mb-3">
-          <input type="text" class="form-control" id="floatingPassword" placeholder="Last Name">
+          <input type="text" class="form-control" id="floatingLastNameDbl" placeholder="Last Name">
           <label for="floatingPassword">Last Name</label>
         </div>
         <div class="form-floating mb-3">
-          <input type="phone" class="form-control" id="floatingPassword" placeholder="Phone Number">
+          <input type="phone" class="form-control" id="floatingPhoneNumberDbl" placeholder="Phone Number">
           <label for="floatingPassword">Phone Number</label>
         </div>
 
