--- a/payment.html
+++ b/payment.html
@@ -126,12 +126,9 @@
         </ul>
       </div>
     </nav>
-    <section>
+    <section id="hero">
       <div class="container-fluid p-0 mb-0">
-        <img class="img-fluid p-0 mb-0" src="./7852702_1932.jpg" />
-        <h1 class="d-flex justify-content-center" id="titleLanding">
-          Book your Cruise
-        </h1>
+        <h1 id="titleLanding">Book your Cruise</h1>
       </div>
     </section>
     <script src="payment.js"></script>
