--- a/payment.html
+++ b/payment.html
@@ -126,9 +126,31 @@
         </ul>
       </div>
     </nav>
-    <section id="hero">
-      <div class="container-fluid p-0 mb-0">
-        <h1 id="titleLanding">Book your Cruise</h1>
+    <section id="home" class="intro-section">
+      <div class="container">
+        <div class="row align-items-center text-white">
+          <div class="col-md-6 intros">
+            <h1 class="display-2">
+              <span class="display-2--intro">Cruise Today!</span>
+              <span class="display-2--description lh-base"
+                >Choose a perfect destination for you...</span
+              >
+            </h1>
+            <button type="button" class="rounded-pill btn-rounded">
+              Availability
+              <span><i class="fas fa-arrow-right"></i></span>
+            </button>
+          </div>
+          <div class="col-md-6 intros text-end">
+            <div class="video-box">
+              <img
+                src="/5375346_2756319.jpg"
+                alt="desc img"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <script src="payment.js"></script>
